<package format="3">
  <name>rosserial_windows</name>
  <version>0.9.2</version>
  <description>
    rosserial for Windows platforms.
  </description>
  <author>Kareem Shehata</author>
  <maintainer email="kshehata@clearpathrobotics.com">Kareem Shehata</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/rosserial_windows</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rosserial_client</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rosserial_msgs</exec_depend>
  <exec_depend>rosserial_client</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>


